-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.6.0
-
3
-
12406
Running on a single node llmount.sh filesystem I often notice that some RPCs are returning -EPROTO which seems odd since client and server are running that same version of Lustre.
LustreError: 11-0: lustre-MDT0000-mdc-ffff8801e3477800: Communicating with 0@lo, operation ldlm_enqueue failed with -71. LustreError: 11973:0:(mdc_locks.c:917:mdc_enqueue()) ldlm_cli_enqueue: -71 LustreError: 12186:0:(mdc_locks.c:917:mdc_enqueue()) ldlm_cli_enqueue: -71
These are actually errors from mdt_unpack_req_pack_rep() (for example, if HABEO_CORPUS is set but the object does not exist then -ENOENT is returned). But in mdt_intent_opc() any error from mdt_unpack_req_pack_rep() is replaced with -EPROTO. We should return the original rc instead so we don't mislead admins and users.
- is related to
-
LU-6549 sanityn test_8: sanityn fails: Protocol error
-
- Resolved
-