LU-4539 mdt: return errors from mdt_unpack_req_pack_rep()

In mdt_intent_opc() if mdt_unpack_req_pack_rep() fails then return its
return value rather than -EPROTO. Also convert mdt_intent_opc()
to the usual error handling style.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I20189171a0d31b6264b680344a8290e604371fe4
Reviewed-on: http://review.whamcloud.com/11650
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: Fan Yong <fan.yong@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>